--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "chmod +x build.sh && ./build.sh",
-  "outputDirectory": "build/jaspr",
-  "routes": [
-    "use": "@vercel/static"
-  }
-],
-"routes": [
-  {
-    "src": "/",
-    "dest": "/build/jaspr/index.html"
-  },
-  {
-    "src": "/(.*)",
-    "dest": "/build/jaspr/$1"
-  }
-]
+  "builds": [
+    {
+      "src": "build.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build/web"
+      }
+    }
+  ]
 }
+
