--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "build.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build/web"
-      }
-    }
-  ]
+  "buildCommand": "chmod +x build.sh && ./build.sh",
+  "outputDirectory": "build/jaspr",
+  "installCommand": "echo 'Using Dart from Vercel environment'"
 }
-
