--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "version": 2,
-  "buildCommand": "chmod +x build.sh && ./build.sh",
-  "outputDirectory": "build/jaspr",
-  "installCommand": "echo 'Installing dependencies'"
+  "builds": [
+    {
+      "src": "pubspec.yaml",
+      "use": "vercel-dart@main"
+    }
+  ]
 }
